added birthday and no number names

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     Email:<input type="text" name="email">
     First Name:<input type="text" name="first">
     Last Name:<input type="text" name="last">
+    Birth Date:(MM/DD/YYYY)<input type="text" name="birddt">
     Password:<input type="password" name ="password">
     Confirm Password:<input type="password" name="confirm">
     <input type="submit" value="Submit">
